--- a/.github/workflows/test-echo.yml
+++ b/.github/workflows/test-echo.yml
@@ -22,7 +22,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Set up Node
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
           node-version: "16"
           cache: "npm"
@@ -31,12 +31,12 @@ jobs:
         run: npm ci
 
       - name: Build
-        run: npm run package --action=${env.ACTION}
+        run: npm run package --action=${{ env.ACTION }}
 
       - name: Test
-        run: npm test src/${env.ACTION}
+        run: npm test src/${{ env.ACTION }}
 
       - name: Use action
-        uses: ./${env.ACTION}
+        uses: ./${{ env.ACTION }}
         with:
           value: "Hello from GitHub Actions"
