--- a/.github/workflows/test-echo.yml
+++ b/.github/workflows/test-echo.yml
@@ -33,10 +33,10 @@ jobs:
       - name: Install
         run: npm ci
 
-      - name: Build
+      - name: Build action
         run: npm run package --action=${{ env.ACTION }}
 
-      - name: Test
+      - name: Test action
         run: npm test src/${{ env.ACTION }}
 
       # - name: Use action
