Test real action

--- a/.github/workflows/test-echo.yml
+++ b/.github/workflows/test-echo.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Test action
         run: npm test src/${{ env.ACTION }}
 
-      # - name: Use action
-      #   uses: ./${{ env.ACTION }}
-      #   with:
-      #     value: "Hello from GitHub Actions"
+      - name: Use action
+        uses: ./echo
+        with:
+          value: "Hello from GitHub Actions"
