--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -25,5 +25,5 @@ jobs:
       - name: Check formatting
         run: npm run format:check
 
-      - name: Check Lint
-        run: npm run format:check
+      - name: Check linting
+        run: npm run lint:check
